Updated _config.yml to have metadata.

--- a/_config.yml
+++ b/_config.yml
@@ -3,3 +3,13 @@ theme: minima
 header_pages:
   - index.md
   - talks_notes.md
+
+
+title: "Seth Nelson Math"
+email: srnelson.math@gmail.com
+description: > # this means to ignore newlines until "baseurl:"
+  This is my website, where I talk about my math, research, presentations, and notes.
+baseurl: "" # the subpath of your site, e.g. /blog/
+url: "http://srnelson1.github.io" # the base hostname & protocol for your site
+github_username:  srnelson1
+linkedin_username: seth-nelson-891438229
