Split assets into presentations and notes. Made linking macro. Added Character Theory notes to notes page.

--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ header_pages:
   - talks_notes.md
 
 
-title: "Seth Nelson Math"
+title: Seth Nelson | Math PhD Student
 author: Seth Nelson
 email: srnelson.math@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
