--- a/_config.yml
+++ b/_config.yml
@@ -6,8 +6,9 @@ header_pages:
   - talks_notes.md
 
 
-title: Seth Nelson | Math PhD Student
+title: Seth Nelson | Math PhD
 author: Seth Nelson
+author_profile: false # true: show author profile, false: hide author profile
 email: srnelson.math@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
   This is my website, where I talk about my math, research, presentations, and notes.
