Switched to Math PhD Student for title.

--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ header_pages:
   - talks_notes.md
 
 
-title: Seth Nelson | Math PhD
+title: Seth Nelson | Math PhD Student
 author: Seth Nelson
 author_profile: false # true: show author profile, false: hide author profile
 email: srnelson.math@gmail.com
